Add train change (Umstieg??) activity suggestion
